# uncertainty-nerf-gs

./: LICENSE  README.md  index.html  pyproject.toml
nerfuncertainty/: utils.py
nerfuncertainty/dataparsers/blender_downscale/: blender_downscale_config.py  blender_downscale_dataparser.py
nerfuncertainty/dataparsers/hh_blender/: hh_blender_config.py  hh_blender_dataparser.py
nerfuncertainty/dataparsers/nerfonthego/: nerfonthego_config.py  nerfonthego_dataparser.py
nerfuncertainty/dataparsers/ood_mipnerf360/: ood_mipnerf360_config.py  ood_mipnerf360_dataparser.py
nerfuncertainty/dataparsers/robustnerf/: robustnerf_config.py  robustnerf_dataparser.py
nerfuncertainty/dataparsers/sparse/: sparse_nerfstudio_config.py
nerfuncertainty/dataparsers/sparse_blender/: sparse_blender_config.py  sparse_blender_dataparser.py
nerfuncertainty/dataparsers/sparse_mipnerf360/: sparse_mipnerf360_config.py  sparse_mipnerf360_dataparser.py
nerfuncertainty/metrics/: __init__.py  auce.py  ause.py  image_metrics.py
nerfuncertainty/models/: __init__.py
nerfuncertainty/models/activenerfacto/: activenerfacto_config.py  activenerfacto_field.py  activenerfacto_model.py
nerfuncertainty/models/activesplatfacto/: activesplatfacto_config.py  activesplatfacto_model.py
nerfuncertainty/models/ensemble/: __init__.py  ensemble_pipeline.py  ensemble_utils.py
nerfuncertainty/models/laplace/: laplace_config.py  laplace_field.py  laplace_model.py
nerfuncertainty/models/mcdropout/: mcdropout_configs.py  mcdropout_fields.py  mcdropout_models.py
nerfuncertainty/scripts/: estimate_gradient_pose_6dof.py  eval_configs.py  eval_uncertainty.py  save_noisy_images.py
static/css/: index.css  twentytwenty.css
